--- a/dont-share.html
+++ b/dont-share.html
@@ -81,18 +81,23 @@
             </div>
             <li class="nav"><a href="#">All</a></li>
             <li class="nav"><a href="#">New</a></li>
-            <li class="nav"><a href="#">2 Player</a></li>
-            <li class="nav"><a href="#">Driving</a></li>
-            <li class="nav"><a href="#">Sports</a></li>
-            <li class="nav"><a href="#">Nintendo</a></li>
-            <li class="nav"><a href="#">Eddynardo</a></li>
-            <li class="nav"><a href="#">Bloons</a></li>
+            <li class="nav"><a href="#">Flash</a></li>
+            <li class="nav"><a href="#">GBA</a></li>
+            <li class="nav"><a href="#">HTML</a></li>
          </ul>
          <div class="bodyMain">
             <div>
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                     <div name="Papa's Pizzeria" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=papaspizzeria.swf">
+                           <div class="content">
+                              <img src="img/papaspizzeria.png" alt="Papa's Pizzeria" style="width:100%">
+                              <h4>Papa's Pizzeria</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Hobo 1" class="column gameDiv all">
                         <a class="blogLink" href="/games/flash/?swf=hobo.swf">
                            <div class="content">
@@ -122,6 +127,30 @@
                            <div class="content">
                               <img src="img/hobo4.png" alt="Hobo 4: Total War" style="width:100%">
                               <h4>Hobo 4: Total War</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Hobo 5: Space Brawl" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=hobo5.swf">
+                           <div class="content">
+                              <img src="img/hobo5.png" alt="Hobo 5: Space Brawl" style="width:100%">
+                              <h4>Hobo 5: Space Brawl</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Hobo 6: Hell" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=hobo6.swf">
+                           <div class="content">
+                              <img src="img/hobo6.png" alt="Hobo 6: Hell" style="width:100%">
+                              <h4>Hobo 6: Hell</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Hobo 7: Heaven" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=hobo7.swf">
+                           <div class="content">
+                              <img src="img/hobo7.png" alt="Hobo 7: Heaven" style="width:100%">
+                              <h4>Hobo 7: Heaven</h4>
                            </div>
                         </a>
                      </div>
