--- a/dont-share.html
+++ b/dont-share.html
@@ -157,7 +157,7 @@
                      <div name="Bloxorz" class="column gameDiv all">
                         <a class="blogLink" href="/games/flash/?swf=bloxorz.swf">
                            <div class="content">
-                              <img src="https://i.ibb.co/dQ42rx0/Bloxorz.png" alt="Bloxorz" style="width:100%">
+                              <img src="img/bloxorz.png" alt="Bloxorz" style="width:100%">
                               <h4>Bloxorz</h4>
                            </div>
                         </a>
