im kinda dumb sometimes

--- a/dont-share.html
+++ b/dont-share.html
@@ -91,7 +91,7 @@
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
                      <div name="Jelly Mario" class="column gameDiv all">
-                        <a class="blogLink" href="/games/jelly-mario/">
+                        <a class="blogLink" href="/games/jelly-mario/jellymar/">
                            <div class="content">
                               <img src="img/jelly-mario.png" alt="Jelly Mario" style="width:100%">
                               <h4>Jelly Mario</h4>
