--- a/dont-share.html
+++ b/dont-share.html
@@ -84,6 +84,7 @@
             <li class="nav"><a href="#">Flash</a></li>
             <li class="nav"><a href="#">GBA</a></li>
             <li class="nav"><a href="#">HTML</a></li>
+            <li class="nav"><a href="#">Bloons</a></li>
          </ul>
          <div class="bodyMain">
             <div>
