--- a/dont-share.html
+++ b/dont-share.html
@@ -91,6 +91,14 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                     <div name="Super Mario 64" class="column gameDiv all new">
+                        <a class="blogLink" href="games/sm64/">
+                           <div class="content">
+                              <img src="img/super-mario64.png" alt="Super Mario 64" style="width:100%">
+                              <h4>Super Mario 64</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Choppy Orc" class="column gameDiv all edd">
                         <a class="blogLink" href="games/choppyorc/">
                            <div class="content">
@@ -126,7 +134,8 @@
                      <div name="The Worlds Hardest Game 2" class="column gameDiv all">
                         <a class="blogLink" href="/games/flash/?swf=worldshardestgame2.swf">
                            <div class="content">
-                              <img src="img/worlds-hardest-game-2.png" alt="The Worlds Hardest Game 2" style="width:100%">
+                              <img src="img/worlds-hardest-game-2.png" alt="The Worlds Hardest Game 2"
+                                 style="width:100%">
                               <h4>The Worlds Hardest Game 2</h4>
                            </div>
                         </a>
