--- a/games/worlds-hardest-game/index.html
+++ b/games/worlds-hardest-game/index.html
@@ -35,11 +35,11 @@
 </head>
 
 <body>
-
-	<div>
-		<script language="javascript" src="main.js" type="text/javascript"></script>
-	</div>
-
+	<center>
+		<div>
+			<script language="javascript" src="main.js" type="text/javascript"></script>
+		</div>
+	</center>
 </body>
 
 </html>
