--- a/dont-share.html
+++ b/dont-share.html
@@ -100,7 +100,7 @@
                         </a>
                      </div>
                      <div name="Choppy Orc" class="column gameDiv all edd">
-                        <a class="blogLink" href="games/choppyorc/">
+                        <a class="blogLink" href="games/choppyorc/docs/">
                            <div class="content">
                               <img src="img/choppyorc.png" alt="Choppy Orc" style="width:100%">
                               <h4>Choppy Orc</h4>
