--- a/dont-share.html
+++ b/dont-share.html
@@ -695,6 +695,15 @@
                            </div>
                         </a>
                      </div>
+                     <div name="007" class="column gameDiv all gba">
+                        <a class="blogLink" href="games/gba/launcher.html#007">
+                           <div class="content">
+                              <img src="img/place-holder.png" alt="007"
+                                 style="width:100%">
+                              <h4>007</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Advance Wars" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#advancewars">
                            <div class="content">
@@ -710,6 +719,42 @@
                               <img src="https://i.ibb.co/g4Mn58g/Advance-Wars2.png" alt="Advance Wars 2"
                                  style="width:100%">
                               <h4>Advance Wars 2</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Aladdin" class="column gameDiv all gba">
+                        <a class="blogLink" href="games/gba/launcher.html#aladdin">
+                           <div class="content">
+                              <img src="img/place-holder.png" alt="Aladdin"
+                                 style="width:100%">
+                              <h4>Aladdin</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Alien Hominid" class="column gameDiv all gba">
+                        <a class="blogLink" href="games/gba/launcher.html#alienhominid">
+                           <div class="content">
+                              <img src="img/place-holder.png" alt="Alien Hominid"
+                                 style="width:100%">
+                              <h4>Alien Hominid</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Atari" class="column gameDiv all gba">
+                        <a class="blogLink" href="games/gba/launcher.html#atari">
+                           <div class="content">
+                              <img src="img/place-holder.png" alt="Atari"
+                                 style="width:100%">
+                              <h4>Atari</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Grand Theft Auto" class="column gameDiv all gba">
+                        <a class="blogLink" href="games/gba/launcher.html#gta">
+                           <div class="content">
+                              <img src="img/gta.png" alt="Grand Theft Auto"
+                                 style="width:100%">
+                              <h4>Grand Theft Auto</h4>
                            </div>
                         </a>
                      </div>
@@ -762,15 +807,6 @@
                               <img src="https://i.ibb.co/J77RM58/sonic-Advance.png" alt="Sonic Advance"
                                  style="width:100%">
                               <h4>Sonic Advance</h4>
-                           </div>
-                        </a>
-                     </div>
-                     <div name="" class="column gameDiv all gba">
-                        <a class="blogLink" href="games/gba/launcher.html#">
-                           <div class="content">
-                              <img src="img/place-holder.png" alt=""
-                                 style="width:100%">
-                              <h4></h4>
                            </div>
                         </a>
                      </div>
