--- a/games/gba/launcher.html
+++ b/games/gba/launcher.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>GBA GameCenter</title>
+        <link rel="shortcut icon" href="Binaries/gb.ico">
+        <title>GBA Emulator</title>
         <meta charset="UTF-8">
             <!--Required Scripts-->
             <script src="IodineGBA/includes/TypedArrayShim.js"></script>
@@ -47,7 +48,6 @@
             <script src="IodineGBA/core/cartridge/SRAM.js"></script>
             <script src="IodineGBA/core/cartridge/FLASH.js"></script>
             <script src="IodineGBA/core/cartridge/EEPROM.js"></script>
-            <!--Add your webpage scripts below-->
             <script src="user_scripts/XAudioJS/swfobject.js"></script>
             <script src="user_scripts/XAudioJS/resampler.js"></script>
             <script src="user_scripts/XAudioJS/XAudioServer.js"></script>
