--- a/dont-share.html
+++ b/dont-share.html
@@ -759,7 +759,7 @@
                      <div name="007" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#007">
                            <div class="content">
-                              <img src="img/place-holder.png" alt="007"
+                              <img src="img/007.png" alt="007"
                                  style="width:100%">
                               <h4>007</h4>
                            </div>
@@ -768,7 +768,7 @@
                      <div name="Advance Wars" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#advancewars">
                            <div class="content">
-                              <img src="img/place-holder.png" alt="Advance-Wars"
+                              <img src="img/advance-wars.png" alt="Advance-Wars"
                                  style="width:100%">
                               <h4>Advance Wars</h4>
                            </div>
@@ -786,7 +786,7 @@
                      <div name="Aladdin" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#aladdin">
                            <div class="content">
-                              <img src="img/place-holder.png" alt="Aladdin"
+                              <img src="img/aladdin.png" alt="Aladdin"
                                  style="width:100%">
                               <h4>Aladdin</h4>
                            </div>
@@ -795,7 +795,7 @@
                      <div name="Alien Hominid" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#alienhominid">
                            <div class="content">
-                              <img src="img/place-holder.png" alt="Alien Hominid"
+                              <img src="img/alien-hominid.png" alt="Alien Hominid"
                                  style="width:100%">
                               <h4>Alien Hominid</h4>
                            </div>
@@ -804,7 +804,7 @@
                      <div name="Atari" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#atari">
                            <div class="content">
-                              <img src="img/place-holder.png" alt="Atari"
+                              <img src="img/atari.png" alt="Atari"
                                  style="width:100%">
                               <h4>Atari</h4>
                            </div>
@@ -822,7 +822,7 @@
                      <div name="Mario Kart" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#mariokart">
                            <div class="content">
-                              <img src="https://i.ibb.co/J5QH5pX/mario-Kart.png" alt="Mario Kart" style="width:100%">
+                              <img src="img/mario-kart.png" alt="Mario Kart" style="width:100%">
                               <h4>Mario Kart</h4>
                            </div>
                         </a>
