--- a/dont-share.html
+++ b/dont-share.html
@@ -118,6 +118,15 @@
                            </div>
                         </a>
                      </div>
+                     <div name="Spelunky" class="column gameDiv all">
+                        <a class="blogLink" href="spelunky/">
+                           <div class="content">
+                              <img src="img/spelunky.png" alt="Spelunky"
+                                 style="width:100%">
+                              <h4>Spelunky</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Edge Not Found" class="column gameDiv all">
                         <a class="blogLink" href="games/edgenotfound/">
                            <div class="content">
