--- a/dont-share.html
+++ b/dont-share.html
@@ -1277,6 +1277,15 @@
                            </div>
                         </a>
                      </div>
+                     <div name="Flappy Squidward" class="column gameDiv all gba">
+                        <a class="blogLink" href="games/gba/launcher.html#gta">
+                           <div class="content">
+                              <img src="img/flappySquidward.png" alt="Grand Theft Auto"
+                                 style="width:100%">
+                              <h4>Golden Sun</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Grand Theft Auto" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#gta">
                            <div class="content">
