flappy squidward refinements

--- a/dont-share.html
+++ b/dont-share.html
@@ -800,6 +800,15 @@
                            </div>
                         </a>
                      </div>
+                     <div name="Flappy Squidward" class="column gameDiv all gba">
+                        <a class="blogLink" href="games/flappySquidward/">
+                           <div class="content">
+                              <img src="img/flappy-squidward.png" alt="Flappy Squidward"
+                                 style="width:100%">
+                              <h4>Flappy Squidward</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="007" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#007">
                            <div class="content">
@@ -1272,15 +1281,6 @@
                         <a class="blogLink" href="games/gba/launcher.html#gta">
                            <div class="content">
                               <img src="img/place-holder.png" alt="Grand Theft Auto"
-                                 style="width:100%">
-                              <h4>Golden Sun</h4>
-                           </div>
-                        </a>
-                     </div>
-                     <div name="Flappy Squidward" class="column gameDiv all gba">
-                        <a class="blogLink" href="games/gba/launcher.html#gta">
-                           <div class="content">
-                              <img src="img/flappySquidward.png" alt="Grand Theft Auto"
                                  style="width:100%">
                               <h4>Golden Sun</h4>
                            </div>
