--- a/dont-share.html
+++ b/dont-share.html
@@ -610,6 +610,14 @@
                            </div>
                         </a>
                      </div>
+                     <div name="Among Us Clicker" class="column gameDiv all">
+                        <a class="blogLink" href="https://amonguredimposter.github.io/Among-U-Red-Imposter-Clicker/">
+                           <div class="content">
+                              <img src="img/among-us-clicker.png" alt="Among Us Clicker" style="width:100%">
+                              <h4>Among Us Clicker</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Google Snake" class="column gameDiv all">
                         <a class="blogLink" href="games/google-snake/">
                            <div class="content">
@@ -904,7 +912,7 @@
                            <div class="content">
                               <img src="img/place-holder.png" alt="Sonic Advance"
                                  style="width:100%">
-                              <h4>Connect Four/Perfection/Trouble</h4>
+                              <h4>Connect Four</h4>
                            </div>
                         </a>
                      </div>
