--- a/dont-share.html
+++ b/dont-share.html
@@ -83,21 +83,12 @@
             <li class="nav"><a href="#">New</a></li>
             <li class="nav"><a href="#">Flash</a></li>
             <li class="nav"><a href="#">GBA</a></li>
-            <li class="nav"><a href="#">HTML</a></li>
          </ul>
          <div class="bodyMain">
             <div>
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
-                     <div name="Cookie Clicker" class="column gameDiv all">
-                        <a class="blogLink" href="games/cookie-clicker/">
-                           <div class="content">
-                              <img src="img/cookie-clicker.png" alt="Cookie Clicker" style="width:100%">
-                              <h4>Cookie Clicker</h4>
-                           </div>
-                        </a>
-                     </div>
                      <div name="Sort The Court" class="column gameDiv all">
                         <a class="blogLink" href="games/sort-the-court/">
                            <div class="content">
@@ -893,7 +884,7 @@
                            <div class="content">
                               <img src="img/place-holder.png" alt="Sonic Advance"
                                  style="width:100%">
-                              <h4>Bomberman Max 2 - Blue Advance</h4>
+                              <h4>Bomberman Max 2</h4>
                            </div>
                         </a>
                      </div>
