--- a/games/cookie-clicker/index.html
+++ b/games/cookie-clicker/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <script type="text/javascript">
@@ -19,7 +19,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 <link href='https://fonts.googleapis.com/css?family=Merriweather:900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <script src="showads.js"></script><!-- this just detects adblockers so we can adjust the layout and play nice -->
 <script src="base64.js"></script>
-<script src="main.js"></script>
+<script src="main.js?v=2.091"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({
