--- a/dont-share.html
+++ b/dont-share.html
@@ -89,6 +89,15 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                     <div name="Game Inside A Game" class="column gameDiv all">
+                        <a class="blogLink" href="games/game-inside/">
+                           <div class="content">
+                              <img src="img/game-inside.png" alt="Game Inside A Game"
+                                 style="width:100%">
+                              <h4>Game Inside A Game</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Sort The Court" class="column gameDiv all">
                         <a class="blogLink" href="games/sort-the-court/">
                            <div class="content">
@@ -549,6 +558,14 @@
                            <div class="content">
                               <img src="img/getaway-shootout.png" alt="Getaway Shootout" style="width:100%">
                               <h4>Getaway Shootout</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Tube Jumpers" class="column gameDiv all 2">
+                        <a class="blogLink" href="games/tube-jumpers/">
+                           <div class="content">
+                              <img src="img/tube-jumpers.png" alt="Tube Jumpers" style="width:100%">
+                              <h4>Tube Jumpers</h4>
                            </div>
                         </a>
                      </div>
