--- a/dont-share.html
+++ b/dont-share.html
@@ -92,7 +92,7 @@
                      <div name="Big Tower Tiny Square" class="column gameDiv all">
                         <a class="blogLink" href="games/btts/index.html">
                            <div class="content">
-                              <img src="img/game-inside.png" alt="Big Tower Tiny Square"
+                              <img src="img/btts.png" alt="Big Tower Tiny Square"
                                  style="width:100%">
                               <h4>Big Tower Tiny Square</h4>
                            </div>
