--- a/dont-share.html
+++ b/dont-share.html
@@ -89,6 +89,15 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                      <div name="Zombs Royale" class="column gameDiv all">
+                        <a class="blogLink" href="games/zombs-royale/index.html">
+                           <div class="content">
+                              <img src="img/zombs-royale.png" alt="Zombs Royale"
+                                 style="width:100%">
+                              <h4>Zombs Royale</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Big Tower Tiny Square" class="column gameDiv all">
                         <a class="blogLink" href="games/btts/index.html">
                            <div class="content">
