--- a/dont-share.html
+++ b/dont-share.html
@@ -92,7 +92,7 @@
                       <div name="Zombs Royale" class="column gameDiv all">
                         <a class="blogLink" href="games/zombs-royale/index.html">
                            <div class="content">
-                              <img src="img/zombs-royale.jpg" alt="Zombs Royale"
+                              <img src="img/zombs-royale.png" alt="Zombs Royale"
                                  style="width:100%">
                               <h4>Zombs Royale</h4>
                            </div>
