--- a/dont-share.html
+++ b/dont-share.html
@@ -107,6 +107,15 @@
                            </div>
                         </a>
                      </div>
+                     <div name="Meat Boy" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=meatboy.swf">
+                           <div class="content">
+                              <img src="img/meatboy.png" alt="Meat Boy"
+                                 style="width:100%">
+                              <h4>Meat Boy</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Game Inside A Game" class="column gameDiv all">
                         <a class="blogLink" href="games/game-inside/">
                            <div class="content">
