--- a/bye-bye.html
+++ b/bye-bye.html
@@ -42,7 +42,7 @@
       <div class="main_content">
          <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-            "Welcome to Jet Yeh's" - Brett Chase
+            "German club ruined spanish club at the soccer game. german > spanish" - Brett Chase
          </div>
          <div class="info">
             <header>
