Update and rename downloads/ytUnblock.html to downloads/youtube/ytUnblock.html

--- a/downloads/youtube/ytUnblock.html
+++ b/downloads/youtube/ytUnblock.html
@@ -54,5 +54,5 @@
     	<p>Made by <a class="linelink" href="https://jcwyt.com" target="_blank">jcwyt.com</a><br>
 		Join our <a class="linelink" href="https://jcwyt.com/discord" target="_blank">Discord Server!</a></p>
     </footer>
-	<script src="script.js"></script>
+	<script src="ytUnblockScript.js"></script>
 </html>
