--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,4 +1,5 @@
-Youtube (2) You need Both <br>
+Youtube (2) You need Both to work <br>
 <a href="/downlods/youtube/ytUnblock.html" download="YoutubeUnblocker">
 </a> <a href="/downlods/youtube/ytUnblockScript.js" download="YoutubeUnblockerScript">
 </a> 
+ 
