--- a/bye-bye.html
+++ b/bye-bye.html
@@ -89,7 +89,16 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
-                      <div name="Zombs Royale" class="column gameDiv all">
+                     <div name="Subway Surfers" class="column gameDiv all">
+                        <a class="blogLink" href="games/subway-surfers/">
+                           <div class="content">
+                              <img src="img/subway-surfers.png" alt="Subway Surfers"
+                                 style="width:100%">
+                              <h4>Subway Surfers</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Zombs Royale" class="column gameDiv all">
                         <a class="blogLink" href="games/zombs-royale/index.html">
                            <div class="content">
                               <img src="img/zombs-royale.png" alt="Zombs Royale"
@@ -148,7 +157,7 @@
                            <div class="content">
                               <img src="img/BSSim.png" alt="NoBitches"
                                  style="width:100%">
-                              <h4> </h4>
+                              <h4>Brett Stoffel Sim</h4>
                            </div>
                         </a>
                      </div>
