--- a/404.html
+++ b/404.html
@@ -99,7 +99,7 @@
             <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo">NO</a>
         </div>
     </section>
-    <script type="text/javascript" src="https://dngaa.github.io/particles.js"></script>
-    <script type="text/javascript" src="https://dngaa.github.io/app.js"></script>
+    <script type="text/javascript" src="https://dngaa.github.io/js/particles.js"></script>
+    <script type="text/javascript" src="https://dngaa.github.io/js/app.js"></script>
 </body>
 </html>
