--- a/bye-bye.html
+++ b/bye-bye.html
@@ -1433,8 +1433,8 @@
                   <span id="progress-value"></span>
                </div>
             </div>
-            <script type="text/javascript" src="particles.js"></script>
-            <script type="text/javascript" src="app.js"></script>
+            <script type="text/javascript" src="js/particles.js"></script>
+            <script type="text/javascript" src="js/app.js"></script>
             <script>
                filterSelection("all")
                function filterSelection(c) {
