--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="particles.js"></script>
-        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="js/particles.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
     </div>
     <div id="attribution">
         Protected by <a href="https://www.maxlaumeister.com/pagecrypt/">PageCrypt</a>
