--- a/pages/request.html
+++ b/pages/request.html
@@ -2,10 +2,17 @@
 <html>
     <head>
         <title>Request</title>
-        <link rel="stylesheet" type="text/css" href="/css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/particles.css">
         <link rel='icon' href="https://i.ibb.co/DYWMfgQ/Untitled-2.png">
+        <style>
+            body{
+                background-color: black;
+            }
+        </style>
     </head>
     <body class=color>
+        <div id="particles-js"></div>
         <center>
         	<br>
 			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVxWIpa-UjJf_f-_mGzYmdv5nbJwdrZf3Tx8JPtxn2vE4HxA/viewform?embedded=true" width="640" height="900px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
@@ -13,5 +20,7 @@
             <button onclick="window.open ('index.html', '_self');" class="button button1">back</button>
             </p>
         </center>
+        <script type="text/javascript" src="/particles.js"></script>
+        <script type="text/javascript" src="/app.js"></script>
     </body>
 </html>
