--- a/movies/the-great-gatsby.html
+++ b/movies/the-great-gatsby.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>The Great Gatsby | Jet Yeh's</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 <style>
 html {overflow: auto;}
 html, body, div, iframe {margin: 0px; padding: 0px; height: 100%; border: none;}
