--- a/bye-bye.html
+++ b/bye-bye.html
@@ -52,10 +52,10 @@
                   </div>
                </h1>
                <div class=right-col>
-                  <img src="https://i.ibb.co/DCvv9Gz/play-button.png" id="icon">
+                  <img src="img/play.png" id="icon">
                </div>
                <audio id="mySong">
-                  <source src="https://codehs.com/uploads/878bb3c793193718a2c071f08521161b" type="audio/ogg">
+                  <source src="media/beet-juice.mp4" type="audio/ogg">
                </audio>
                <script>
                   var mySong = document.getElementById("mySong");
@@ -63,10 +63,10 @@
                   icon.onclick = function () {
                      if (mySong.paused) {
                         mySong.play();
-                        icon.src = "https://i.ibb.co/2kbtwrG/pause.png"
+                        icon.src = "img/pause.png"
                      } else {
                         mySong.pause();
-                        icon.src = "https://i.ibb.co/DCvv9Gz/play-button.png"
+                        icon.src = "img/play.png"
                      }
                   }
                </script>
@@ -678,7 +678,7 @@
                      <div name="Chrome Dinosaur" class="column gameDiv all">
                         <a class="blogLink" href="games/chrome-dino/">
                            <div class="content">
-                              <img src="https://i.ibb.co/wS8h16P/dino.png" alt="Chrome Dinosaur" style="width:100%">
+                              <img src="img/dino.png" alt="Chrome Dinosaur" style="width:100%">
                               <h4>Chrome Dinosaur</h4>
                            </div>
                         </a>
@@ -686,7 +686,7 @@
                      <div name="Tetris" class="column gameDiv all nin">
                         <a class="blogLink" href="/games/flash/?swf=tetris.swf">
                            <div class="content">
-                              <img src="https://i.ibb.co/SwwYxvP/tetris.png" alt="Tetris" style="width:100%">
+                              <img src="img/tetris.png" alt="Tetris" style="width:100%">
                               <h4>Tetris</h4>
                            </div>
                         </a>
@@ -694,7 +694,7 @@
                      <div name="Super Mario Bros" class="column gameDiv all nin">
                         <a class="blogLink" href="games/full-screen-mario/">
                            <div class="content">
-                              <img src="https://i.ibb.co/s33KVfn/supermario.png" alt="Super Mario Bros"
+                              <img src="img/supermario.png" alt="Super Mario Bros"
                                  style="width:100%">
                               <h4>Super Mario Bros</h4>
                            </div>
@@ -703,7 +703,7 @@
                      <div name="Doodle Jump" class="column gameDiv all">
                         <a class="blogLink" href="games/doodle-jump/">
                            <div class="content">
-                              <img src="https://cdn.nichesites.pikoya.com/mobile4win_com/images/games/28782/market.jpg"
+                              <img src="img/doodle-jump.jpg"
                                  alt="Doodle Jump" style="width:100%">
                               <h4>Doodle Jump</h4>
                            </div>
@@ -728,7 +728,7 @@
                      <div name="Rolling Sky" class="column gameDiv all">
                         <a class="blogLink" href="games/webgl-rollingsky/">
                            <div class="content">
-                              <img src="https://i.ibb.co/cwMBSPC/rolling-Sky.png" alt="Rolling Sky" style="width:100%">
+                              <img src="img/rolling-Sky.png" alt="Rolling Sky" style="width:100%">
                               <h4>Rolling Sky</h4>
                            </div>
                         </a>
@@ -736,24 +736,16 @@
                      <div name="Madalin Stunt Cars" class="column gameDiv all car">
                         <a class="blogLink" href="games/madalin-cars-multiplayer/">
                            <div class="content">
-                              <img src="https://i.ibb.co/5Kq0BQY/madalin-stunt-cars-2.png" alt="Madalin Stunt Cars"
+                              <img src="img/madalin-stunt-cars-2.png" alt="Madalin Stunt Cars"
                                  style="width:100%">
                               <h4>Madalin Stunt Cars</h4>
-                           </div>
-                        </a>
-                     </div>
-                     <div name="Cat Mario" class="column gameDiv nin all">
-                        <a class="blogLink" href="catMario.html">
-                           <div class="content">
-                              <img src="https://i.ibb.co/gMQyPGL/catMario.png" alt="Cat Mario" style="width:100%">
-                              <h4>NOT WORKING</h4>
                            </div>
                         </a>
                      </div>
                      <div name="2048" class="column gameDiv all">
                         <a class="blogLink" href="games/2048/">
                            <div class="content">
-                              <img src="https://i.ibb.co/ZfBR56n/2048.png" alt="2048" style="width:100%">
+                              <img src="img/2048.png" alt="2048" style="width:100%">
                               <h4>2048</h4>
                            </div>
                         </a>
@@ -761,7 +753,7 @@
                      <div name="Minecraft Classic" class="column gameDiv all">
                         <a class="blogLink" href="games/minecraft-classic/">
                            <div class="content">
-                              <img src="https://i.ibb.co/L542Wfp/minecraft-Classic.png" alt="Minecraft Classic"
+                              <img src="img/minecraft-Classic.png" alt="Minecraft Classic"
                                  style="width:100%">
                               <h4>Minecraft Classic</h4>
                            </div>
@@ -786,7 +778,7 @@
                      <div name="Basketball Legends" class="column gameDiv all 2 sport">
                         <a class="blogLink" href="games/basketball-stars/">
                            <div class="content">
-                              <img src="https://i.ibb.co/n12280g/basketball-Legends.png" alt="Basketball Legends"
+                              <img src="img/basketball-Legends.png" alt="Basketball Legends"
                                  style="width:100%">
                               <h4>Basketball Legends</h4>
                            </div>
@@ -795,7 +787,7 @@
                      <div name="Gun Mayhem 2" class="column gameDiv all 2">
                         <a class="blogLink" href="#">
                            <div class="content">
-                              <img src="https://i.ibb.co/99mXDmX/Gun-Mayham.png" alt="Gun Mayhem 2" style="width:100%">
+                              <img src="img/Gun-Mayham.png" alt="Gun Mayhem 2" style="width:100%">
                               <h4>NOT WORKING</h4>
                            </div>
                         </a>
@@ -803,7 +795,7 @@
                      <div name="Tank Trouble 2" class="column gameDiv all 2 car">
                         <a class="blogLink" href="games/tank-trouble-2/">
                            <div class="content">
-                              <img src="https://i.ibb.co/7VyqTzg/tank-Trouble.png" alt="Tank Trouble 2"
+                              <img src="img/tank-Trouble.png" alt="Tank Trouble 2"
                                  style="width:100%">
                               <h4>Tank Trouble 2</h4>
                            </div>
@@ -812,7 +804,7 @@
                      <div name="GunBlood" class="column gameDiv all">
                         <a class="blogLink" href="/games/flash/?swf=gunblood.swf">
                            <div class="content">
-                              <img src="https://i.ibb.co/WHVfFhb/gunBlood.png" alt="Gun Blood" style="width:100%">
+                              <img src="img/gunBlood.png" alt="Gun Blood" style="width:100%">
                               <h4>GunBlood</h4>
                            </div>
                         </a>
@@ -884,7 +876,7 @@
                      <div name="Advance Wars 2" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#advancewars2">
                            <div class="content">
-                              <img src="https://i.ibb.co/g4Mn58g/Advance-Wars2.png" alt="Advance Wars 2"
+                              <img src="img/Advance-Wars2.png" alt="Advance Wars 2"
                                  style="width:100%">
                               <h4>Advance Wars 2</h4>
                            </div>
@@ -1309,7 +1301,7 @@
                      <div name="Pokemon FireRed" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#pokemonred">
                            <div class="content">
-                              <img src="https://i.ibb.co/vQ09GWw/pokemon-Fired-Red.png" alt="Pokémon FireRed"
+                              <img src="img/pokemon-Fired-Red.png" alt="Pokémon FireRed"
                                  style="width:100%">
                               <h4>Pokemon FireRed</h4>
                            </div>
@@ -1318,7 +1310,7 @@
                      <div name="Monopoly" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#monopoly">
                            <div class="content">
-                              <img src="https://i.ibb.co/ZBJgwHX/monoply.png" alt="Monopoly" style="width:100%">
+                              <img src="img/monoply.png" alt="Monopoly" style="width:100%">
                               <h4>Monopoly</h4>
                            </div>
                         </a>
@@ -1326,7 +1318,7 @@
                      <div name="Tetris Worlds" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#tetris_worlds">
                            <div class="content">
-                              <img src="https://i.ibb.co/YpCtnvD/tetris-Worlds.png" alt="Tetris Worlds"
+                              <img src="img/tetris-Worlds.png" alt="Tetris Worlds"
                                  style="width:100%">
                               <h4>Tetris Worlds</h4>
                            </div>
@@ -1335,7 +1327,7 @@
                      <div name="Super Monkey Ball Jr" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#supermonkeyballjr">
                            <div class="content">
-                              <img src="https://i.ibb.co/kQQ05rc/super-Monkey-Ball.png" alt="Super Monkey Ball Jr"
+                              <img src="img/super-Monkey-Ball.png" alt="Super Monkey Ball Jr"
                                  style="width:100%">
                               <h4>Super Monkey Ball Jr</h4>
                            </div>
@@ -1344,7 +1336,7 @@
                      <div name="Sonic Advance" class="column gameDiv all gba">
                         <a class="blogLink" href="games/gba/launcher.html#sonic_advance">
                            <div class="content">
-                              <img src="https://i.ibb.co/J77RM58/sonic-Advance.png" alt="Sonic Advance"
+                              <img src="img/sonic-Advance.png" alt="Sonic Advance"
                                  style="width:100%">
                               <h4>Sonic Advance</h4>
                            </div>
