--- a/bye-bye.html
+++ b/bye-bye.html
@@ -20,24 +20,18 @@
                <li><i class="fa-solid fa-up-long"></i> Top</li>
             </a>
             <a href="/pages/report.html">
-               <li><i class="fa-solid fa-bug"></i> Report Bug</li>
+               <li><i class="fa-solid fa-bug"></i> Bug Report</li>
             </a>
             <a href="/pages/request.html">
-               <li><i class="fa-solid fa-ghost"></i> Request Game</li>
+               <li><i class="fa-solid fa-ghost"></i> Game Request</li>
             </a>
-            <a href="https://classroom.google.com/h">
-               <li><i class="fa-solid fa-chalkboard"></i> Google Classroom</li>
+            <a href="/pages/#">
+               <li><i class="fa-solid fa-gear"></i> Settings</li>
             </a>
             <div class=left-col>
                <img src="img/icon.png" width="199px">
             </div>
          </ul>
-         <div class="social_media">
-            <center>
-               <img src="https://www.cutercounter.com/hits.php?id=hxafdfd&nd=4&style=10" border="0"
-                  alt="best free website hit counter">
-            </center>
-         </div>
       </div>
       <div class="main_content">
          <div class="alert">
